# fortran-scripts

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  fpm.toml
app/: CMakeLists.txt  main.f90
config/: config.cmake  fflags.cmake  fortran-caf-toolchain.cmake
src/: CMakeLists.txt  arrays2.f90  arrays3.f90  fortran-scripts.f90  grids.f90  input.f90  legendre.f90  matrix1.f90  matrix2.f90  matrix3.f90  matrix4.f90  stokes.f90  timer.f90
src/adjustment/: CMakeLists.txt  gen_A.f90
src/arrays/: CMakeLists.txt  arrays1.f90  arrays2.f90  arrays4.f90
src/fypp/: checks.fypp  prueba.fypp  testmod.fpp
src/geoutils/: CMakeLists.txt  point.f90  point.fypp  pruebageo.f90
src/linalg/: CMakeLists.txt  eye.f90  eye.fypp  mod_eye.mod  mod_tri.mod  pruebalinal.f90  tri.f90
src/matrix/: CMakeLists.txt
test/: check.f90
