add_executable(arrays1 arrays1.f90)
add_executable(arrays2 arrays2.f90)
add_executable(arrays3 arrays3.f90)
add_executable(arrays4 arrays4.f90)

add_executable(matrix1 matrix1.f90)
add_executable(matrix2 matrix2.f90)
add_executable(matrix3 matrix3.f90)
add_executable(matrix4 matrix4.f90)

add_executable(timer timer.f90)
